--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerator_core @ git+https://github.com/NIEHS/accelerator-core@develop
+accelerator_core @ git+https://github.com/NIEHS/accelerator-core@41-post-action-logger---add-action-to-log-status-after-workflow-completion
 openpyxl~=3.1.2
 requests~=2.32.3
 PyYAML~=6.0.1
